# copilot-dispatch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.env/: .env.example  .env.test
.github/agents/: Implementation.agent.md  PhaseDocs.agent.md  ProjectManager.agent.md  Review.agent.md  SolutionsArchitect.agent.md  TechLead.agent.md  TechnicalBusinessAnalyst.agent.md  Test.agent.md
.github/instructions/: copilot.instructions.md
.github/workflows/: agent-executor.yml  ci.yml  deploy.yml
app/: __init__.py
app/config/: __init__.py  settings.yaml
app/docs/: runbook.md
app/src/: __init__.py  config.py  exceptions.py  main.py
docs/: autopilot-public-release-analysis-2026-03-10.md  docker-guide.md  implementation-context-phase-1.md  solution-design.md
infra/: __init__.py  app.py  cdk.json  requirements.txt  test_boto3.py  test_secret.py
infra/stacks/: __init__.py  copilot_dispatch_stack.py
scripts/: dev.sh  evals.py  init_dynamodb.py  smoke_test.py  webhook_receiver.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_actions_flow.py  test_implement_flow.py  test_merge_flow.py  test_review_flow.py
tests/integration/: __init__.py  test_actions_endpoints.py  test_agent_local.py  test_api_endpoints.py  test_full_api_flow.py  test_run_store_integration.py
tests/unit/: __init__.py  test_actions_models.py  test_actions_routes.py  test_actions_service.py  test_agent_definitions.py  test_api_key.py  test_cdk_stack.py  test_component_1_2_scaffolding.py  test_config.py  test_deploy_workflow.py  test_dispatcher.py  test_exceptions.py  (+15 more)
(+27 files in other folders)
